--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="text-muted" href="#" aria-label="Search">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img" viewBox="0 0 24 24" focusable="false"><title>Search</title><circle cx="10.5" cy="10.5" r="7.5"></circle><path d="M21 21l-5.2-5.2"></path></svg>
             </a>
-            <a class="btn btn-sm btn-outline-secondary" href="#">Área do cliente</a>
+            <a class="btn btn-sm btn-outline-secondary" href="login.html">Área do cliente</a>
           </div>
         </div>
       </header>
@@ -207,5 +207,32 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<!-- FIREBASE-->
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyA-LHYrvMnxo7D-PGzcI2zZMlWfzYpHLG4",
+    authDomain: "bancoportifolio.firebaseapp.com",
+    databaseURL: "https://bancoportifolio.firebaseio.com",
+    projectId: "bancoportifolio",
+    storageBucket: "bancoportifolio.appspot.com",
+    messagingSenderId: "857732383415",
+    appId: "1:857732383415:web:b292be79478e415cb18332",
+    measurementId: "G-W8SLTD3HKK"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
+
 
 </html>
